--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -41,12 +41,11 @@
       <div class="contact">
         <p>
           <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
-          <a href="http://twitter.com/{{ site.author.twitter }}/">twitter.com/{{ site.author.twitter }}</a><br />
         </p>
       </div>
       <div class="rss">
         <a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">
-          <img src="{{ ASSET_PATH }}/images/rss.png" alt="Subscribe to RSS Feed" />
+       RSS Feed
         </a>
       </div>
     </div>
