--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -45,7 +45,7 @@
       </div>
       <div class="rss">
         <a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">
-       RSS Feed
+       RSS Feed &nbsp;
         </a>
       </div>
     </div>
