--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -45,8 +45,8 @@
       </div>
       <div class="rss">
         <a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">
-       RSS Feed &nbsp;
-        </a>
+       RSS Feed</a> &nbsp;
+        
       </div>
     </div>
   </div>
