--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -34,12 +34,12 @@
       <div class="contact">
         <p>
           {{ site.author.name }}<br />
-          {{ site.tagline }}<br />
+          {{ site.tagline }}
         </p>
       </div>
       <div class="contact">
         <p>
-          <a href='mailto:{{ site.author.email }}'>{{ site.author.email }}</a>
+          <a href='mailto:{{ site.author.email }}'>{{ site.author.email }}</a><br />
           <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
         </p>
       </div>
