--- a/_includes/themes/tom/post.html
+++ b/_includes/themes/tom/post.html
@@ -4,7 +4,9 @@
     {{ page.date | date_to_long_string }} 
     {% if page.location %}{{ page.location }}{% endif %}
   </p>
+<p>&nbsp;</p>
   {{ content }}
+<p>&nbsp;</p>
 </div>
 
 <div id="related">
