post layout fuss

--- a/_includes/themes/tom/post.html
+++ b/_includes/themes/tom/post.html
@@ -5,7 +5,9 @@
     {% if page.location %}{{ page.location }}{% endif %}
   </p>
 <p>&nbsp;</p>
+<hr style="width:450px">
   {{ content }}
+<hr style="width:450px">
 <p>&nbsp;</p>
 </div>
 
