--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -19,6 +19,7 @@
 <body>
 
   <div class="site">
+  ![art with arms contending](assets/artvarms.jpg)
     <div class="title">
       <a href="{{ HOME_PATH }}">{{ site.title }}</a>
 
