--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -19,7 +19,7 @@
 <body>
 
   <div class="site">
-  <a href="{{ HOME_PATH }}"><img src="assets/artvarms.jpg"></a>
+  <a href="{{ HOME_PATH }}"><img src="/assets/artvarms.jpg"></a>
     <div class="title">
       <a href="{{ HOME_PATH }}">{{ site.title }}</a>
 
