--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -19,7 +19,8 @@
 <body>
 
   <div class="site">
-	<div align="center">  <a href="{{ HOME_PATH }}"><img src="/assets/compass.jpg"></a> </div>
+	<a href="{{ HOME_PATH }}"><img src="/assets/compass.jpg"></a>
+    <p>&nbsp;</p>
     <div class="title">
       <a href="{{ HOME_PATH }}">{{ site.title }}</a>
 
