--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -19,7 +19,7 @@
 <body>
 
   <div class="site">
-	<a href="{{ HOME_PATH }}"><img src="/assets/compass.jpg"></a>
+	<a href="{{ HOME_PATH }}"><img src="/assets/compass.jpg" width="170"></a>
     <p>&nbsp;</p>
     <div class="title">
       <a href="{{ HOME_PATH }}">{{ site.title }}</a>
