--- a/_includes/themes/tom/post.html
+++ b/_includes/themes/tom/post.html
@@ -12,6 +12,24 @@
 <p>&nbsp;</p>
 </div>
 
+<div id="page-navigation"> 
+        <div class="clear">&nbsp;</div> 
+        <div class="left"> 
+        {% if page.previous.url %} 
+                <a href="{{page.previous.url}}" title="Previous Post: 
+{{page.previous.title}}">&laquo; {{page.previous.title}}</a> 
+        {% endif %} 
+        </div> 
+
+        <div class="right"> 
+        {% if page.next.url %} 
+                <a href="{{page.next.url}}" title="next Post: 
+{{page.next.title}}">{{page.next.title}} &raquo; </a> 
+        {% endif %} 
+        </div> 
+        <div class="clear">&nbsp;</div> 
+</div> 
+
 <!--div id="related">
   <h2>Related Posts</h2>
   <ul class="posts">
