--- a/_includes/themes/tom/post.html
+++ b/_includes/themes/tom/post.html
@@ -4,7 +4,7 @@
     {{ page.date | date_to_long_string }} 
     {% if page.location %}{{ page.location }}{% endif %}
   </p>
-<hr style="width:450px">
+<hr style="width:450px" />
 <p>&nbsp;</p>
 
   {{ content }}
@@ -12,6 +12,7 @@
 <p>&nbsp;</p>
 </div>
 
+<hr style="width:250px" />
 <div id="page-navigation"> 
         <div class="clear">&nbsp;</div> 
         <div class="left"> 
