--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -22,8 +22,7 @@
 	<a href="{{ HOME_PATH }}"><img src="/assets/compass.jpg" width="170"></a>
     <p>&nbsp;</p>
     <div class="title">
-      <a href="{{ HOME_PATH }}">{{ site.title }}</a>
-
+      <a href="{{ HOME_PATH }}">{{ site.title }}</a> &rsaquo;&rsaquo;
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.categories_path }}">Categories</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.tags_path }}">Tags</a>
