--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -34,14 +34,14 @@
     <div class="footer">
       <div class="contact">
         <p>
-          {{ site.author.name }}<br />
-          {{ site.tagline }}
+          {{ site.author.name }}<!--br />
+          {{ site.tagline }} -->
         </p>
       </div>
       <div class="contact">
         <p>
-          <a href='mailto:{{ site.author.email }}'>{{ site.author.email }}</a><br />
-          <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
+          <a href='mailto:{{ site.author.email }}'>{{ site.author.email }}</a><!--br />
+          <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br /-->
         </p>
       </div>
       <div class="rss">
