posts and fixes

--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -42,11 +42,11 @@
           <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br /-->
         </p>
       </div>
-      <div class="rss">
+      <!--div class="rss">
         <a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">
        RSS Feed</a> &nbsp;
         
-      </div>
+      </div-->
     </div>
   </div>
   
