--- a/assets/themes/tom/css/screen.css
+++ b/assets/themes/tom/css/screen.css
@@ -35,7 +35,7 @@ p {
 }
 
 a {
-  color: #00a;
+  color: #0f388a;
 }
 
 a:hover {
@@ -43,7 +43,7 @@ a:hover {
 }
 
 a:visited {
-  color: #a0a;
+  color: #324467;
 }
 
 table {
