--- a/assets/themes/tom/css/screen.css
+++ b/assets/themes/tom/css/screen.css
@@ -35,7 +35,7 @@ p {
 }
 
 a {
-  color: #0f388a;
+  color: #043495;
 }
 
 a:hover {
@@ -43,7 +43,7 @@ a:hover {
 }
 
 a:visited {
-  color: #324467;
+  color: #1b3c7e;
 }
 
 table {
