--- a/_includes/themes/tom/post.html
+++ b/_includes/themes/tom/post.html
@@ -12,7 +12,7 @@
 <p>&nbsp;</p>
 </div>
 
-<hr style="width:250px" />
+<!--hr style="width:250px" />
 <div id="page-navigation"> 
         <div class="clear">&nbsp;</div> 
         <div class="left"> 
@@ -29,7 +29,7 @@
         {% endif %} 
         </div> 
         <div class="clear">&nbsp;</div> 
-</div> 
+</div--> 
 
 <!--div id="related">
   <h2>Related Posts</h2>
