--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -25,6 +25,7 @@
       <a href="{{ HOME_PATH }}">{{ site.title }}</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.categories_path }}">Categories</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.tags_path }}">Tags</a>
+      <a class="extra" href="https://www.blog.dpmaddalena.com">Socials</a>	    
     </div>
   
     {{ content }}
