--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -25,7 +25,7 @@
       <a href="{{ HOME_PATH }}">{{ site.title }}</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.categories_path }}">Categories</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.tags_path }}">Tags</a>
-      <!--a class="extra" href="https://blog.dpmaddalena.com">Social</a-->
+      <a class="extra" href="https://blog.dpmaddalena.com">Social</a>
       <a class="extra" href="https://cottonbureau.com/people/maddalena-collage">Shop</a>
     </div>
   
