--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -25,8 +25,8 @@
       <a href="{{ HOME_PATH }}">{{ site.title }}</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.categories_path }}">Categories</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.tags_path }}">Tags</a>
-      <a class="extra" href="https://blog.dpmaddalena.com">Social</a>
       <a class="extra" href="https://cottonbureau.com/people/maddalena-collage">Shop</a>
+      <a class="extra" href="https://blog.dpmaddalena.com">Social</a>
     </div>
   
     {{ content }}
@@ -34,8 +34,8 @@
     <div class="footer">
       <div class="contact">
         <p>
-          {{ site.author.name }}<!--br />
-          {{ site.tagline }} -->
+          {{ site.author.name }} ::
+          {{ site.tagline }} 
         </p>
       </div>
       <div class="contact">
@@ -44,11 +44,11 @@
           <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br /-->
         </p>
       </div>
-      <!--div class="rss">
+      <div class="rss">
         <a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">
-       RSS Feed</a> &nbsp;
+       RSS </a> &nbsp;
         
-      </div-->
+      </div>
     </div>
   </div>
   
