--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -34,7 +34,7 @@
     <div class="footer">
       <div class="contact">
         <p>
-          {{ site.author.name }} ::
+          {{ site.author.name }}
           {{ site.tagline }} 
         </p>
       </div>
