--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -34,8 +34,8 @@
     <div class="footer">
       <div class="contact">
         <p>
-          {{ site.author.name }}
-          {{ site.tagline }} 
+          {{ site.author.name }} :: 
+          {{ site.tagline }} :: 
           <a href='mailto:{{ site.author.email }}'>{{ site.author.email }}</a>
 		
         </p>
