--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -22,7 +22,7 @@
 	<a href="{{ HOME_PATH }}"><img src="/assets/compass.jpg" width="190"></a>
     <p>&nbsp;</p>
     <div class="title">
-      <a href="{{ HOME_PATH }}">{{ site.author.name }}</a>
+      <a href="{{ HOME_PATH }}">{{ site.name }}</a>
       <!--a class="extra" href="{{ BASE_PATH }}{{ site.JB.categories_path }}">Categories</a-->
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.tags_path }}">Tags</a>
       <a class="extra" href="https://cottonbureau.com/people/maddalena-collage">Shop</a>
@@ -34,7 +34,7 @@
     <div class="footer">
       <div class="contact">
         <p>
-          {{ site.author.name }} :: 
+          {{ site.name }} :: 
           {{ site.tagline }} :: 
           <a href='mailto:{{ site.author.email }}'>{{ site.author.email }}</a>
 		
