--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -36,8 +36,7 @@
         <p>
           {{ site.name }} :: 
           {{ site.tagline }} :: 
-          <a href='mailto:{{ site.author.email }}'>{{ site.author.email }}</a>
-		
+          <a href='mailto:{{ site.email }}'>{{ site.email }}</a>
         </p>
       </div>
       <!--div class="rss">
