--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ site.title }}</title>
-   <meta name="author" content="{{ site.author.name }}" />
+   <meta name="author" content="{{ site.author }}" />
    <link href="http://feeds.feedburner.com/{{ site.author.feedburner }}" rel="alternate" title="your title" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
