--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -4,7 +4,8 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ site.title }}</title>
    <meta name="author" content="{{ site.author }}" />
-   <link href="http://feeds.feedburner.com/{{ site.author.feedburner }}" rel="alternate" title="your title" type="application/atom+xml" />
+	
+   <!--link href="http://feeds.feedburner.com/{{ site.author.feedburner }}" rel="alternate" title="your title" type="application/atom+xml" /-->
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/syntax.css" type="text/css" />
