--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -40,9 +40,9 @@
           <a href='mailto:{{ site.email }}'>{{ site.email }}</a>
         </p>
       </div>
-      <!--div class="rss">
-        <a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">
-       RSS </a> &nbsp;
+      <div class="rss">
+        <a href="/atom.xml">
+       RSS</a> &nbsp;
         
     </div-->
     </div>
