--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -37,7 +37,7 @@
         <p>
           {{ site.name }} :: 
           {{ site.tagline }} :: 
-          <a href='mailto:{{ site.email }}'>{{ site.email }}</a>
+          dpmaddalena at pm dot me
         </p>
       </div>
       <div class="rss">
