--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -37,7 +37,7 @@
         <p>
           {{ site.name }} :: 
           {{ site.tagline }} :: 
-          dpmaddalena at pm dot me
+          dpmaddalena@pm.me
         </p>
       </div>
       <div class="rss">
