--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -15,7 +15,9 @@
 
    <!-- Typekit -->
    <script type="text/javascript" src="//use.typekit.com/jpd0pfm.js"></script>
-   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+   <script 
+   type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 </head>
 <body>
 
@@ -26,7 +28,7 @@
       <a href="{{ HOME_PATH }}">{{ site.name }}</a>
       <!--a class="extra" href="{{ BASE_PATH }}{{ site.JB.categories_path }}">Categories</a-->
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.tags_path }}">Tags</a>
-      <a class="extra" href="https://blog.dpmaddalena.com">Social</a>
+      <!--a class="extra" href="https://blog.dpmaddalena.com">Social</a-->
       <a class="extra" href="https://cottonbureau.com/people/maddalena-collage">Shop</a>
     </div>
   
