--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -39,7 +39,7 @@
         <p>
           {{ site.name }} :: 
           {{ site.tagline }} :: 
-          dpmaddalena@pm.me
+          info@dpmaddalena.com
         </p>
       </div>
       <div class="rss">
